kustomizations/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searxng
  name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: searxng
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-pre-populate-only: "true"
        vault.hashicorp.com/role: "searxng"
        vault.hashicorp.com/agent-copy-volume-mounts: "searxng"
        vault.hashicorp.com/agent-inject-secret-settings.yml: "k8s/data/argocd/searxng"
        vault.hashicorp.com/agent-inject-template-file-settings.yml: "/etc/searxng-tpl/settings.yml.tpl"
        vault.hashicorp.com/agent-run-as-user: "977"
        vault.hashicorp.com/agent-run-as-group: "977"
        vault.hashicorp.com/agent-inject-perms-settings.yml: "0640"
    spec:
      serviceAccountName: searxng
      containers:
        - image: searxng/searxng:2025.8.1-3d96414@sha256:3f229455cee2e21bd9bd910fd1193687b380ebe2a083e15ad19bd5df72bab47f
          name: searxng
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /var/cache/searxng
            - name: settings-tpl
              mountPath: /etc/searxng-tpl
              readOnly: true
            - name: etc-searxng
              mountPath: /etc/searxng
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "1Gi"
              cpu: "1"
          securityContext:
            allowPrivilegeEscalation: false
      securityContext:
        runAsUser: 977
        runAsGroup: 977

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: searxng-data
        - name: settings-tpl
          configMap:
            name: searxng-settings
        - name: etc-searxng
          emptyDir: {}
