kustomizations/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
  name: searxng
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: searxng
  type: ClusterIP
status:
  loadBalancer: {}
